Fix grid layout bug

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -118,7 +118,7 @@ figcaption {
 
 footer {
   display: grid;
-  justify-content: center;
+  justify-items: center;
   padding-bottom: var(--spacingL);
 }
 
